--- a/style.css
+++ b/style.css
@@ -352,7 +352,7 @@ noscript {
     display: flex;
     list-style: none;
     justify-content: flex-end;
-    gap: 80px;
+    gap: 40px;
     color: var(--color-white)
 }
 
@@ -911,7 +911,7 @@ noscript {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding-top: 100px
+    padding-top: 120px
 }
 
 .about-section,
@@ -966,7 +966,8 @@ noscript {
 }
 
 .about-info {
-    width: 60%;
+    width: 100%;
+    margin: 5%;
     display: flex;
     flex-direction: column
 }
@@ -1000,7 +1001,7 @@ noscript {
 }
 
 .skills-section-container {
-    padding-top: 100px;
+    padding-top: 120px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -1109,7 +1110,7 @@ footer {
 }
 
 .projects-section-container {
-    padding: 50px 0;
+    padding: 120px 0;
     display: flex;
     align-items: center;
     justify-content: center;
