--- a/style.css
+++ b/style.css
@@ -1184,13 +1184,22 @@ footer {
     font-size: 3.4rem;
     font-weight: 700
 }
+.ProjectHead {
+    color: var(--color-white);
+    font-size: 2.7rem;
+    font-weight: 700
+}
 
 .ProjectDescription {
     color: gray;
     font-size: 1.7rem;
     font-weight: 400
 }
-
+.ProjectDesc {
+    color: white;
+    font-size: 2rem;
+    font-weight: 400
+}
 .project-buttons {
     width: 100%;
     display: flex;
